# opengl_renderer

./: .gitignore  .gitmodules  CMakeLists.txt  readme.md
3rdlibs/: CMakeLists.txt  imgui.cmake
example/: CMakeLists.txt  skybox.hpp
example/geometry/: CMakeLists.txt  main.cpp
example/lighting/: CMakeLists.txt  main.cpp
example/model_loading/: CMakeLists.txt  main.cpp
example/resources/shaders/: skybox.vert
example/scenes/: CMakeLists.txt
example/scenes/include/: advanced_lighting_scene.hpp  scene.hpp  shader_toy_scene.hpp
example/scenes/src/: advanced_lighting_scene.cpp  main.cpp  scenes.cpp  shader_toy_scene.cpp
renderer/: CMakeLists.txt
renderer/include/: interface.hpp  manager.hpp  renderer.hpp  wen.hpp
renderer/include/base/: camera.hpp  enums.hpp  utils.hpp
renderer/include/core/: imgui.hpp  window.hpp
renderer/include/resources/: framebuffer.hpp  index_buffer.hpp  mesh.hpp  model.hpp  shader.hpp  shader_program.hpp  texture_2d.hpp  uniform_buffer.hpp  vertex_array.hpp  vertex_buffer.hpp  vertex_layout.hpp
renderer/include/resources/geometry/: box_geometry.hpp  geometry_buffer.hpp  plane_geometry.hpp  sphere_geometry.hpp  torus_geometry.hpp
renderer/src/: interface.cpp  manager.cpp  renderer.cpp  utils.cpp
renderer/src/base/: camera.cpp  utils.cpp
renderer/src/core/: imgui.cpp  window.cpp
renderer/src/resources/: framebuffer.cpp  index_buffer.cpp  mesh.cpp  model.cpp  shader.cpp  shader_program.cpp  texture_2d.cpp  uniform_buffer.cpp  vertex_array.cpp  vertex_buffer.cpp
sandbox/: CMakeLists.txt  main.cpp
(+20 files in other folders)
